# lab-cms

./: .gitignore  README.md  intro.ipynb  pyproject.toml  script_convert_images.py
data/: coeff_poly7.txt  fcc111a336+1.txt  poly7.py
data/pos-fcc100-minime/: fcc100a108_Epot.csv  fcc100a108_Fmax.csv  fcc100a1372_1.txt  fcc100a1372_Epot.csv  fcc100a2048_Epot.csv  fcc100a256_1.txt  fcc100a256_Epot.csv  fcc100a500_Epot.csv  fcc100a500_Fmax.csv  fcc100a864_Epot.csv  fcc100a864_Fmax.csv
data/pos-fcc100-minime/C_s=1e-2~F_t=1e-3~max_s=50k/: fcc100a108_1.txt  fcc100a108_Epot.csv  (+16 more)
docs/: README.md
docs/MolecularDynamics/: CrystalDynamics.md  CrystalPotential.md  CrystalStructure.md  PolynomialJunction.md  SteepestDescend.md  index.md  io.md
docs/MonteCarlo/: KineticMonteCarlo.md  MetropolisMonteCarlo.md  NumbaSubroutines.md  index.md
erikagiacomantonio/: hello_world.ipynb  lezione 1.py  lezione 2.1.py  lezione 2.cutoff.py  lezione 2.py
erikagiacomantonio/Esercizio1/: PolynomialJunction.py  cristallo.py  esercizio 1.py
erikagiacomantonio/Lezione-2/: lezione 2.2.py
zosojack/: Crystal.py  __init__.py  calcoli.ipynb  intro.ipynb
zosojack/CMS/: __init__.py
zosojack/libraries/: Crystal.py  CrystalDynamics.py  CrystalDynamicsNumpy.py  CrystalDynamicsNumpy2.py  CrystalPotential.py  CrystalStructure.py  PolynomialJunction.py  SteepestDescend.py  io.py  simplified.py
zosojack/notebooks/: Esercizio0.ipynb  calcoli.ipynb  intro.ipynb  potenziali_e_forze.ipynb  prova_semplificata.ipynb
zosojack/output/: potenziale_no_cutoff.txt
zosojack/tutorials/: Class_Crystal.ipynb
(+4958 files in other folders)
